test(script): improve and optimaized Java settings